--- a/meteor/imports/ui/components/config/new_competition/main/index.html
+++ b/meteor/imports/ui/components/config/new_competition/main/index.html
@@ -1,13 +1,17 @@
 <template name="new_competition_main">
-    <div class="view navbar-through">
-        <div class="navbar">
-            <div class="navbar-inner">
-                <div class="left"></div>
-                <div class="center">Neuer Wettkampf</div>
-                <div class="right"></div>
+    <div class="pages">
+        <div data-page="index" class="page navbar-fixed toolbar-fixed">
+
+
+            <div class="navbar">
+                <div class="navbar-inner">
+                    <div class="left"></div>
+                    <div class="center">Neuer Wettkampf</div>
+                    <div class="right"></div>
+                </div>
             </div>
-        </div>
-        <div class="page">
+
+
             <div class="page-content">
                 <div class="content-block-title">Wettkampfattribute</div>
                 <div class="list-block">
@@ -35,11 +39,13 @@
                     </ul>
                 </div>
             </div>
-        </div>
-        <div class="toolbar">
-            <div class="toolbar-inner">
-                <a href="" id="link_back" class="link">Abbrechen</a>
-                <a href="" id="link_next" class="link">Weiter</a>
+
+
+            <div class="toolbar">
+                <div class="toolbar-inner">
+                    <a href="" id="link_back" class="link">Abbrechen</a>
+                    <a href="" id="link_next" class="link">Weiter</a>
+                </div>
             </div>
         </div>
     </div>
