--- a/meteor/imports/ui/components/config/home/left/index.html
+++ b/meteor/imports/ui/components/config/home/left/index.html
@@ -1,40 +1,46 @@
 <template name="home_left">
-    <!-- Navbar -->
-    <div class="navbar">
-        <div class="navbar-inner">
-            <div class="left"></div>
-            <div class="center">Wettkampf wechseln</div>
-            <div class="right"></div>
-        </div>
-    </div>
-    <!-- Page Content -->
-    <div class="page">
-        <div class="page-content">
-            <!-- Headline -->
-            <div class="content-block-title">Datei wählen</div>
-            <div class="list-block">
-                <!-- File List -->
-                <ul>
-                    <!-- List entry for a new competition -->
-                    <li><a id="link-new_competition" href="#" class="item-link" data-page="main-view">
-                        <div class="item-content">
-                            <div class="item-inner">
-                                <div class="item-title">Neuer Wettkampf</div>
-                            </div>
-                        </div>
-                    </a></li>
-                    {{#each n in competitions}}
-                        <li>
-                            <a href="#" class="item-link link-activate_competition" data-page="main-view"
-                               data-competition_name="{{n}}">
-                                <div class="item-content" data-competition_name="{{n}}">
-                                    <div class="item-inner" data-competition_name="{{n}}">
-                                        <div class="item-title" data-competition_name="{{n}}">{{n}}</div>
-                                    </div>
+    <div class="pages">
+        <div data-page="index" class="page navbar-fixed">
+
+
+            <!-- Navbar -->
+            <div class="navbar">
+                <div class="navbar-inner">
+                    <div class="left"></div>
+                    <div class="center">Wettkampf wechseln</div>
+                    <div class="right"></div>
+                </div>
+            </div>
+
+
+            <!-- Page Content -->
+            <div class="page-content">
+                <!-- Headline -->
+                <div class="content-block-title">Datei wählen</div>
+                <div class="list-block">
+                    <!-- File List -->
+                    <ul>
+                        <!-- List entry for a new competition -->
+                        <li><a id="link-new_competition" href="#" class="item-link" data-page="main-view">
+                            <div class="item-content">
+                                <div class="item-inner">
+                                    <div class="item-title">Neuer Wettkampf</div>
                                 </div>
-                            </a></li>
-                    {{/each}}
-                </ul>
+                            </div>
+                        </a></li>
+                        {{#each n in competitions}}
+                            <li>
+                                <a href="#" class="item-link link-activate_competition" data-page="main-view"
+                                   data-competition_name="{{n}}">
+                                    <div class="item-content" data-competition_name="{{n}}">
+                                        <div class="item-inner" data-competition_name="{{n}}">
+                                            <div class="item-title" data-competition_name="{{n}}">{{n}}</div>
+                                        </div>
+                                    </div>
+                                </a></li>
+                        {{/each}}
+                    </ul>
+                </div>
             </div>
         </div>
     </div>
