--- a/meteor/imports/ui/components/config/home/left/index.html
+++ b/meteor/imports/ui/components/config/home/left/index.html
@@ -32,9 +32,9 @@
                             <li>
                                 <a href="#" class="item-link link-activate_competition" data-page="main-view"
                                    data-competition_name="{{n}}">
-                                    <div class="item-content" data-competition_name="{{n}}">
-                                        <div class="item-inner" data-competition_name="{{n}}">
-                                            <div class="item-title" data-competition_name="{{n}}">{{n}}</div>
+                                    <div class="item-content">
+                                        <div class="item-inner">
+                                            <div class="item-title">{{n}}</div>
                                         </div>
                                     </div>
                                 </a></li>
